[package]
name = "roker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.19"
config = "0.11"
tokio-tungstenite = "0.15"
tokio = {version = "1", features=["net", "time", "rt-multi-thread"]}
log = "0.4"
tungstenite = "0.15"
futures = "0.3"
